[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epoch-printer"
version = "0.1.0"
description = "Lightweight fixed-width metric table printer for ML training loops"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["machine learning", "deep learning", "training", "metrics", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/bpisaacoff/epoch-printer"
Repository = "https://github.com/bpisaacoff/epoch-printer"

[tool.hatch.build.targets.wheel]
packages = ["src/epoch_printer"]
